benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-rfi001_power.opt_pso.opt_rmo.opt_tso.oepc_tso.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi001_power.opt_pso.opt_rmo.opt_tso.oepc_tso.opt.yml/rfi001_power.opt_pso.opt_rmo.opt_tso.oepc_tso.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi001_power.opt_pso.opt_rmo.opt_tso.oepc_tso.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_qmr8n1he/tmp/tmp5rbn4zow.c
Compilation started
/tmp/BenchExec_run_qmr8n1he/tmp/tmp5rbn4zow.c: In function ‘main’:
/tmp/BenchExec_run_qmr8n1he/tmp/tmp5rbn4zow.c:653:19: error: ‘FALSE’ undeclared (first use in this function)
  653 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_qmr8n1he/tmp/tmp5rbn4zow.c:653:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
